Changelog
=========

2.3.8 (unreleased)
------------------

- Nothing changed yet.


2.3.7 (2012-12-14)
------------------

- @@manage-portlets: Tooltip for X icon is "Remove", should be "Delete"
  [maartenkling]

2.3.6 (2012-10-11)
------------------

- Allow for the root content item icon in the navigation portlet to be
  displayed with CSS or an img tag.
  [danjacka]

2.3.5 (2012-09-28)
------------------

- Fix inheritance hierarchy of IPortletForm to reflect usage in z3cformhelper.
  [elro]

2.3.4 (2012-09-28)
------------------

- Tweak z3c.form add/edit forms to disable edit bar and columns.
  [elro]

2.3.3 (2012-09-27)
------------------

- Portlets are now registered for IDefaultPortletManager by default to allow
  for easier creation of custom portlet managers with restricted portlets.
  [elro]

2.3.2 (2012-09-26)
------------------

- Fix ManagePortletsViewlet to work with KSS.
  [elro]

- Fix ManagePortletsViewlet to work with Plone 4+.
  [elro]

- Fix 'This portlet display a'.
  [danjacka]

- reverted change: refactory nested tal:conditions in ``navigation_recurse.pt``, merged into
  one tal:condition in ul tag.
  [maartenkling]

- add contenttype class to the a tag, like navigation
  [maartenkling]

- Don't break TinyMCE on editing parent-portlets (fixes http://dev.plone.org/ticket/12899)
  [pbauer]

- Inside Review portlet display footer link only to Reviewers.
  Closes ticket https://dev.plone.org/ticket/6629
  [vipod]

- Use ``type`` instead of ``makeClass`` for Zope 4 compatibility.
  [elro]

- Add safety check for portletHeader links [davilima6]

2.3.1 (2012-08-29)
------------------

- Fix packaging error.
  [esteele]

2.3 (2012-08-29)
----------------

- Calendar portlet links to @@search (plone.app.search) view instead of
  deprecated search.pt.
  [seanupton]

- When navigation portlet has an explicit custom root set, clicking the portlet heading
  goes to this content item instead of the global sitemap.